--- a/homework/Assignment.html
+++ b/homework/Assignment.html
@@ -6,31 +6,35 @@
 	<link rel="stylesheet" type="text/css" href="./style-assignment.css">
 </head>
 <body>
-	<header >
-		<h1 >Công ty ABC</h1>
+	<header>
+		<h1>Công ty ABC</h1>
 	</header>
-	<nav style="float: left;">
-		<ol>
-			<ul>Danh mục 1</ul>
-		</ol>
-		<ol>
-			<ul>Danh mục 2</ul>
-		</ol>
-		<ol>
-			<ul>Danh mục 3</ul>
-		</ol>
-		<ol>
-			<ul>Danh mục 4</ul>
-		</ol>
-	</nav>
-	<aside >
-		<h2>Tiêu đề</h2>
-		<p>Theo ông Phu, Việt Nam đã  làm "sớm và quyết liệt". Ngay từ giai đoạn đầu của dịch, Việt Nam đã triển khai biện pháp mạnh mẽ là tập trung giám sát người nhập cảnh, đầu tiên là Trung Quốc, Hàn Quốc, sau đó đến Châu Âu, Mỹ. Khi số người nhập cảnh giảm thì số ca nhiễm trong nhóm này cũng giảm.
-		</p>
-		<p>
-			Ở giai đoạn này, ông Phu đánh giá Việt Nam đã kiểm soát và xét nghiệm người nhập cảnh nhiều, nhưng xét nghiệm sàng lọc trong cộng đồng chưa nhiều. "Cần đẩy mạnh xét nghiệm trong cộng đồng, vì có xét nghiệm mới phát hiện nhiều, từ đó có cơ sở đánh giá được tình hình dịch",ông Phu nói.
-		</p>
-	</aside>
+	<section>
+		<aside >
+			<ul>
+				<li>Danh mục 1</li>
+			</ul>
+			<ul>
+				<li>Danh mục 2</li>
+			</ul>
+			<ul>
+				<li>Danh mục 3</li>
+			</ul>
+			<ul>
+				<li>Danh mục 4</li>
+			</ul>
+		</aside>
+		<main >
+			<div>
+				<h2>Tiêu đề</h2>
+				<p>Theo ông Phu, Việt Nam đã  làm "sớm và quyết liệt". Ngay từ giai đoạn đầu của dịch, Việt Nam đã triển khai biện pháp mạnh mẽ là tập trung giám sát người nhập cảnh, đầu tiên là Trung Quốc, Hàn Quốc, sau đó đến Châu Âu, Mỹ. Khi số người nhập cảnh giảm thì số ca nhiễm trong nhóm này cũng giảm.
+				</p>
+				<p>
+					Ở giai đoạn này, ông Phu đánh giá Việt Nam đã kiểm soát và xét nghiệm người nhập cảnh nhiều, nhưng xét nghiệm sàng lọc trong cộng đồng chưa nhiều. "Cần đẩy mạnh xét nghiệm trong cộng đồng, vì có xét nghiệm mới phát hiện nhiều, từ đó có cơ sở đánh giá được tình hình dịch",ông Phu nói.
+				</p>
+			</div>
+		</main>
+	</section>
 	<footer ><p>Footer Text</p></footer>
 </body>
 </html>
