--- a/homework_Bootstrap_excercise/Bootstrap.html
+++ b/homework_Bootstrap_excercise/Bootstrap.html
@@ -22,7 +22,7 @@
 	<main>
 		<div class="container-fluid">
 			<div class="row">
-				<div style="margin-top: 10px" class="col-xl-4 col-12 item1" >
+				<div style="margin-top: 10px" class="col-md-3 col-12 item1" >
 					<ul>
 						<li>The Flight</li>
 					</ul>
@@ -36,7 +36,7 @@
 						<li>The Food</li>
 					</ul>
 				</div>
-				<div style="margin-top: 10px" class="col-xl-8 col-12 item1">
+				<div style="margin-top: 10px; padding: 10px 15px;" class="col-md-9 col-12 item1">
 					<div style="border: 1px solid grey">
 						<h1>The City</h1>
 						<p>Chania is the capital of the Chania region on the island of Crete. The city can be divided in two parts, the old town and the modern city.
@@ -49,11 +49,11 @@
 			</div>
 		</div>
 
-		<h4><u>TIN LIÊN QUAN</u></h4>
+		<h4 style="border-bottom: 2px solid orange; display: inline-block;">TIN LIÊN QUAN</h4>
 
 		<div class="container-fluid">
 			<div class="row">
-				<div class="col-xl-5 col-12 item2">
+				<div class="col-md-5 col-12 item2">
 					<div class="item3">
 						<img src="./img/giadinh.jpg" alt="giadinh" style="width: 25%; float: left; border-radius: 10px; margin-left: 10px; margin-right: 10px; margin-top: 10px; margin-bottom: 20px">
 					</div>
@@ -63,7 +63,7 @@
 						<p class="time"><img src="./img/author.jpg" alt ="author" style="width: 30px; border-radius: 50%"><b class="author" style="color: #61b7ff">Mikeknowme</b>-3 giờ trước</p>
 					</div>
 				</div>
-				<div class="col-xl-5 col-12 item2">
+				<div class="col-md-5 col-12 item2">
 					<div class="item3">
 						<img src="./img/giadinh.jpg" alt="giadinh" style="width: 25%; float: left; border-radius: 10px; margin-left: 10px; margin-right: 10px; margin-top: 10px; margin-bottom: 20px">
 					</div>
@@ -76,7 +76,7 @@
 			</div>
 		</div>
 
-		<h4><u>CÓ THỂ BẠN THÍCH</u></h4>
+		<h4 style="border-bottom: 2px solid orange; display: inline-block;">CÓ THỂ BẠN THÍCH</h4>
 
 		<div class="container-fluid" style="margin-bottom: 10px; ">
 			<div class="row" >
