--- a/Function-Excercise/js.html
+++ b/Function-Excercise/js.html
@@ -8,9 +8,9 @@
 	<script type="text/javascript">
 		var ds1 = ["Ung Văn Giau","Nguyễn Thị Ngọc Linh","Phạm Thị Uyên Thi","Nguyễn Hoàng Mỹ Linh", "Cao Thị Thanh Mai"];
 		print(ds1);
-		function print(arguments){
-			for (var i = 0; i < arguments.length; i++) {
-				console.log(arguments[i]);
+		function print(hahas){
+			for (var i = 0; i < ds1.length; i++) {
+				console.log(ds1[i]);
 			}
 		}
 	</script>
