--- a/Jquery-Ajax/Jquery.html
+++ b/Jquery-Ajax/Jquery.html
@@ -31,28 +31,28 @@
 	      <th scope="row">1</th>
 	      <td>Mark</td>
 	      <td>Otto</td>
-	      <td><button type="button" id="selected" class="btn btn-link">Xóa</button></td>
+	      <td><button type="button" class ="del" class="btn btn-link">Xóa</button></td>
 	    </tr>
 	    <tr>
 	      <th scope="row">2</th>
 	      <td>Jacob</td>
 	      <td>Thornton</td>
-	      <td><button type="button" id="selected" class="btn btn-link">Xóa</button></td>
+	      <td><button type="button" class="del" class="btn btn-link">Xóa</button></td>
 	    </tr>
 	    <tr>
 	      <th scope="row">3</th>
 	      <td>Larry</td>
 	      <td>the Bird</td>
-	      <td><button type="button" id="selected" class="btn btn-link">Xóa</button></td>
+	      <td><button type="button" class="del" class="btn btn-link">Xóa</button></td>
 	    </tr>
 	  </tbody>
 	</table>
 
 	<script type="text/javascript" >
 
-		// $('.table tbody').on('click','#selected', function(){
-		// 	$(this).parents('tr').remove();
-		// });
+		$('.table').on('click','.del', function(){
+			$(this).parents('tr').remove();
+		});
 
 		$('#addRow').click(function(){
 			var firstname = $('#fname').val();
@@ -62,6 +62,7 @@
 			      <th scope="row"></th>
 			      <td>${firstname}</td>
 			      <td>${lastname}</td>
+			      <td><button type="button" class ="del" class="btn btn-link">Xóa</button></td>
 			  	</tr>`;
 			$('.table').append(markup);
 		});
