--- a/jqueryUI-Regex/prb2-exec.html
+++ b/jqueryUI-Regex/prb2-exec.html
@@ -9,7 +9,7 @@
 		let text = `George is studying Javascript at Telerik Academy, 
 		while Jimmy goes to Telerik Kids Academy`;
 
-		let academyRegex = /Telerik\s(software\s)?academy/gi;
+		let academyRegex = /Telerik\s(software\s|algo\s|kids\s)?academy/gi;
 
 		let isMatch = academyRegex.test(text);
 
