--- a/jqueryUI-Regex/prb2-match.html
+++ b/jqueryUI-Regex/prb2-match.html
@@ -8,9 +8,10 @@
 		let text = `George is studying Javascript at Telerik Academy, 
 		while Jimmy goes to Telerik Kids Academy`;
 
-		let academyRegex = /Telerik\s(software\s)?academy/gi;
+		let academyRegex = /Telerik\s(software\s|algo\s|kids\s)?academy/gi;
 
 		let isMatch = academyRegex.test(text);
+		console.log(isMatch);
 
 		let matches = text.match(academyRegex);
 
