--- a/Lab5/lab4-prb3-Forum  Posts.html
+++ b/Lab5/lab4-prb3-Forum  Posts.html
@@ -7,62 +7,9 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 
 	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-	<!-- <link rel="stylesheet" type="text/css" href="./prb1.css"> -->
+	<link rel="stylesheet" type="text/css" href="./lab4-prb3.css">
 	<style type="text/css">
-		body{
-			background-color: #A326D1;
-			color:#fff;
-		}
-		.logo{
-			font-family: magneto;
-			font-size: 70px;
-		}
-		input{
-			border-radius: 10px;
-			background-color: #A326D1;
-		}
-		.home{
-			list-style-type: none;
-			display: inline-block;
-			padding-left: 20px;
-		}
-		.menu{
-			border:1px solid black;
-			border-radius: 10px;
-			padding-top: 10px;
-		}
-		.noidung{
-			border:1px solid black;
-			border-radius: 10px;
-			margin-top: 20px;
 
-		}
-		@font-face{
-			font-family: Edwardian Script ITC;
-			src: url("../Lab 4 - Attached Source Code/Problem 1 - Font/EdwardianScriptITC.ttf");
-		}
-
-		p{
-			font-family: Consolas;
-			font-size: 10px;
-		}
-
-		.p1:first-letter{
-			font-family: Edwardian Script ITC;
-			font-size: 2.9em;
-		}
-		.author{
-			padding-left: 600px;
-		}
-		.fod{
-			text-align: center;
-		}
-		strong{
-			color:#ccc;
-		}
-		.Widget{
-			font-family: Consolas;
-		}
 	</style>
 </head>
 <body>
