--- a/Lab5/prb5-Product Section.html
+++ b/Lab5/prb5-Product Section.html
@@ -28,7 +28,7 @@
 			width: 300px;
 			padding-bottom: 10px;
 			padding-top: 10px;
-			margin:;
+			/*margin:;*/
 		}
 		b{
 			color:red;
@@ -66,7 +66,8 @@
 		}
 		.middle{
 			opacity: 0;
-			margin: 10px 10px;
+			top: 20%;
+			left: 30%;
 		}
 	</style>
 </head>
@@ -88,7 +89,6 @@
 					</div>
 					<h5>Tổng đài Ip Xcomaoufao</h5>
 					<b>Vui lòng gọi(541)584641664</b>
-					
 				</div>
 				<div class="col-md-6">
 					<div class="baogom">
